fix(config): stop rejecting icon URLs on a rule ntfy does not have
The check required the path to end in .png, .jpg or .jpeg and called
that ntfy's constraint, in the message, the docs and five adapter
javadocs. ntfy says JPEG and PNG are the only formats it renders — a
property of the bytes served, not of how the path is spelt. So every
content-negotiated or avatar URL, the extension-less kind CDNs hand out
by the million, was dropped at startup as unrenderable when it would
have rendered fine. Through NtfyClient it was dropped with no diagnostic
at all, which is the invisible no-icon-forever failure the guard was
added to prevent, manufactured by the guard.

What survives is the part a URL can honestly answer: can a client fetch
it. An extension naming a format ntfy is documented not to render now
earns a warning and is sent anyway, because being wrong about it costs
an operator an icon they could have had.

Also splits the one icon warning into three, one per problem. The same
message covered a bad default icon, a discarded table entry and a
malformed pair, while naming only the first — so an operator whose table
was at fault would go and inspect a value that is perfectly valid. The
tests assert which message they get rather than that "icon" appeared.

Docs gain the two limits that were missing: ntfy renders icons on
Android only, and the NtfyClient path has no startup and so no
diagnostic.